--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 
       ws.onmessage = function (event) {
         const data = JSON.parse(event.data);
-        console.log(data);
+        //console.log(data);
 
         if (data.remaining_coins !== undefined) {
           remainingCoinsElement.textContent = data.remaining_coins;
@@ -61,8 +61,10 @@
         if (data.random_message !== undefined) {
           randomMessageElement.textContent = data.random_message;
         }
-        if (data.messages !== undefined) {
+        if (Array.isArray(data) && data.length > 0) {
           renderMessages(data);
+        } else {
+          console.log("Received data is not a valid array or it's empty.");
         }
       };
 
