--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with Coins</title>
+    <title>bawam</title>
     <style>
       .message {
         margin-bottom: 10px;
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Chat with Coins</h1>
+    <h1>Banner advertising with auction model</h1>
 
     <div>
       <span>Remaining Coins: </span><span id="remainingCoins">Loading...</span>
